<resources>
    <string name="app_name">Project Manager</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_projects">Projects</string>
    <string name="title_activity_tasks">Tasks</string>
    <string name="txtEmail">email</string>
    <string name="txtLoginPassword">password</string>
    <string name="btnLogin">login</string>
    <string name="btnRegister">register</string>
    <string name="txtRepeatPassword">repeat password</string>
    <string name="txtUsername">username</string>
    <string name="txtNoAccount">Don\'t have an Account?</string>
    <string name="btnGoRegister">register</string>
    <string name="cantLogin">User not found</string>
    <string name="passNotEqual">Passwords aren\'t equal</string>
    <string name="userExists">That user already exists</string>
    <string name="blankTitleProject">Not named</string>
    <string name="blankTitleTask">Not named</string>
    <string name="blankDescriptionProject">No description.</string>
    <string name="choose">Choose</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="title_activity_work">Work</string>
    <string name="title_activity_work_time">Work</string>
    <string name="projectName">Project Name</string>
    <string name="projectDesc">Project Description</string>
    <string name="save">Save</string>
    <string name="taskName">Task name</string>
    <string name="dueDate">Due Date</string>
    <string name="insert">Insert</string>
    <string name="initDate">Wait date</string>
    <string name="expected">Expected</string>
    <string name="progress">Progress</string>
    <string name="date">Date</string>
    <string name="hours">Hours</string>
    <string name="add">Add</string>
    <string name="cancel">Cancel</string>
    <string name="update">Update</string>
    <string name="changeHours">Enter new value</string>
    <string name="reminderTitle">Reminder</string>
    <string name="reminderDesc">Don\'t forget to add today\'s work.</string>
    <string name="reminderSet">A notification has been set as a reminder.</string>
    <string name="calendar">Calendar</string>
    <string name="showCompleted">Show completed</string>
    <string name="toastShowCompleted">Show completed tasks</string>
    <string name="toastDontShowCompleted">Hide completed tasks</string>
    <string name="dbSaved">Database saved</string>
    <string name="totalWorked">Total Worked:</string>
    <string name="noWritePrivileges">App doesn\'t have write privileges</string>
    <string name="pathNoExists">Database doesn\'t exist yet, try to login at least one time</string>
    <string name="infoNew">email: admin | pass: admin</string>
    <string name="projectInvitation">%1$s invited you to: %2$s</string>
    <string name="invite">Invite</string>
    <string name="enterUserEmail">Enter user email</string>
    <string name="send">Send</string>
</resources>
