<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".view.worktime.WorkActivity"
    tools:showIn="@layout/activity_work">

    <android.support.v7.widget.RecyclerView
        android:id="@+id/workReciclerView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="150dp"
        android:scrollbars="vertical"
        app:layout_constraintTop_toBottomOf="@+id/buttonAddWork" />

    <TextView
        android:id="@+id/txtDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:text="@string/date"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtTotalWorked" />

    <EditText
        android:clickable="true"
        android:focusable="false"
        android:id="@+id/editDate"
        android:layout_width="121dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:inputType="date"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtDate" />

    <TextView
        android:id="@+id/txtHours"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:text="@string/hours"
        app:layout_constraintStart_toEndOf="@+id/editDate"
        app:layout_constraintTop_toBottomOf="@+id/txtTotalWorked" />

    <EditText
        android:id="@+id/editHours"
        android:layout_width="85dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:inputType="numberDecimal"
        app:layout_constraintStart_toStartOf="@+id/txtHours"
        app:layout_constraintTop_toBottomOf="@+id/txtHours" />

    <Button
        android:id="@+id/buttonAddWork"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:text="@string/add"
        app:layout_constraintStart_toEndOf="@+id/editHours"
        app:layout_constraintTop_toBottomOf="@+id/txtHours" />

    <TextView
        android:id="@+id/txtTotalWorked"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/totalWorked"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txtTimeWorked"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:text="0"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/txtTotalWorked"
        app:layout_constraintTop_toTopOf="parent" />
    <!--tools:layout_editor_absoluteX="8dp"-->
        <!--tools:layout_editor_absoluteY="8dp" />-->
</android.support.constraint.ConstraintLayout>